--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap');
 body {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Zen Kurenaido', sans-serif;
 }
 
 h1 {
@@ -25,8 +25,8 @@ img {
     border-style: wave;
     border-color: slategray;
     border-radius: 10px;
-    width: 100px;
-    height: 150px;
+    width: 175px;
+    height: 135px;
     object-fit: cover;
     padding: 0px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -36,19 +36,28 @@ img {
     height: 30px;
 }
 
+#name {
+    width: 90%;
+    font-size: 15px;
+}
 button {
-    margin: 10px;
     font-family: inherit;
+    font-size: 15px;
+    color: darkgrey;
     position: center;
+    background: transparent;
+    border: none;
 }
 
 
 input {
     position: center;
     margin: 0 auto;
-    font-size: 20px;
+    font-size: 9px;
     font-family: inherit;
-    width: 90%;
+    width: 215px;
+    background: transparent;
+    border: none;
 }
 :root {
     --bg-rose: #ffabd4;
